data/derived/sp14/progs/unify/prog4032.ml.out
Characters 152-154:
  and rest = n - 1*(10**s) in
                    ^^
Error: This expression has type int but an expression was expected of type
         float
